# junction

./: .gitmodules  .travis.yml  Cargo.toml  Junction user test 2019.odt  README.md  allpaths.md  debug_proceed_fails.cbor  new_arch.md  todo.md
app/: Cargo.toml
app/src/: lib.rs
builder/: Cargo.toml  deps-syn.dot  deps.dot
builder/src/: lib.rs
calc/: Cargo.toml
calc/src/: dataset.rs  dgraph.rs  lib.rs  schematic.rs
calc/src/analysis/: mod.rs  plan.rs  sim.rs  synthesis.rs
ci/: before_deploy.sh  install.sh  script.sh
dgraphbuilder/: Cargo.toml
dgraphbuilder/src/: lib.rs
docs/: _config.yml  dispatch.md  gettingstarted.md  index.md  infrastructure.md  log.md  modelinspector.md  planning.md  railml.md  settings.md  signaldesigner.md  toolwindows.md  vehicles.md
docs/windows/: log.md  modelinspector.md  railml.md  settings.md  signaldesigner.md  vehicles.md
glrail/: Cargo.toml  tt.ron
glrail/src/: app.rs  background.rs  command_builder.rs  dgraph.rs  graph.rs  infrastructure.rs  instant.rs  interlocking.rs  lib.rs  main.rs  model.rs  scenario.rs  schematic.rs  sdlinput.rs  selection.rs  vehicle.rs  view.rs
glrail/src/analysis/: lint.rs  mod.rs  plan.rs  sim.rs  synthesis.rs
glrail/src/ui/: canvas.rs  command.rs  graph.rs  mod.rs  sidebar.rs
gridlinesedit/: Cargo.toml  doc.json  features.md
gridlinesedit/src/: grid_canvas.rs  main.rs  model.rs  pt.rs  renderrotated.rs  scratch.rs  symset.rs  topology.rs
gui/: Cargo.toml
gui/src/: canvas.rs  gui.rs  lib.rs  menubar.rs
imgui-sys-bindgen/: Cargo.toml  build.rs  wrapper.h
imgui-sys-bindgen/lib/: cimgui.cpp  cimgui.h
imgui-sys-bindgen/src/: lib.rs
imgui-sys-opengl/: build.rs
imgui-sys-opengl/src/: lib.rs
imgui-sys-test/: Cargo.toml
imgui-sys-test/src/: app.rs  main.rs  schematic.rs  sdlinput.rs
immuted/: Cargo.toml
immuted/src/: canvas.rs  colors.rs  config.rs  debug.rs  dgraph.rs  diagram.rs  dispatch.rs  file.rs  history.rs  import.rs  interlocking.rs  logview.rs  main.rs  mainmenu.rs  mileage.rs  model.rs  objects.rs  topology.rs  ui.rs  util.rs  vehicles.rs  view.rs  viewmodel.rs
lib/backend_directx9/: Cargo.toml  build.rs
lib/backend_directx9/lib/: main.cpp
lib/backend_directx9/src/: lib.rs
lib/backend_glfw/: Cargo.toml  build.rs
lib/backend_glfw/lib/: main.cpp
lib/backend_glfw/src/: fa_icons.rs  lib.rs
lib/glrail/: Cargo.toml  example.gl1
lib/glrail/src/: app.rs  command_builder.rs  dgraph.rs  graph.rs  interlocking.rs  issue.rs  main.rs  model.rs  scenario.rs  vehicle.rs  view.rs  wake.rs
lib/glrail/src/analysis/: plan.rs  synthesis.rs
lib/glrail/src/ui/: command.rs  issues.rs
lib/gridlinesedit/: Cargo.toml  doc.json  plan.md  routelang.md
lib/gridlinesedit/src/: simple_canvas.rs
lib/imgui-sys-bindgen/: Cargo.toml  build.rs  wrapper.h
lib/imgui-sys-bindgen/lib/: cimgui.cpp  cimgui.h
lib/imgui-sys-bindgen/src/: json.rs  lib.rs  text.rs
lib/imgui-sys-opengl/: Cargo.toml
lib/imgui-sys-opengl/src/: lib.rs
lib/numerical_optimization/: Cargo.toml
lib/numerical_optimization/src/: brent.rs  lib.rs  powell.rs
lib/railmlio/: Cargo.toml  eidsvoll.cbor  eidsvoll.railml  railml_tutorial_tracks.railml  threetrack.2.railml  threetrack.railml  twotrack.railml
lib/railmlio/src/: lib.rs  model.rs  topo.rs  xml.rs
lib/route_finder/: Cargo.toml
lib/route_finder/src/: detectors.rs  lib.rs  routes.rs  sight.rs
lib/synthesis_tests/: Cargo.toml  overtake_noinf.ron
lib/synthesis_tests/overtake-200m-20mps-095brake/: overtake-13.ron  overtake-15.ron  overtake-17.ron  overtake-19.ron  overtake-23.ron  overtake-25.ron  overtake-29.ron  overtake-31.ron  overtake-35.ron  overtake-37.ron  overtake-43.ron  overtake-45.ron  overtake-47.ron  overtake-51.ron  overtake-55.ron  overtake-57.ron  overtake-63.ron  overtake-69.ron  overtake-75.ron
lib/synthesis_tests/overtake-200m-30mps-050brake/: overtake-13.ron  overtake-15.ron  overtake-17.ron
lib/synthesis_tests/src/: main.rs
model/: Cargo.toml  README.md
model/src/: custom.rs  infrastructure.rs  interlocking.rs  lib.rs  scenario.rs
src/: app.rs  canvas.rs  config.rs  file.rs  import.rs  interlocking.rs  main.rs  model.rs  oldmain.rs  topology.rs  util.rs  viewmodel.rs
src/document/: analysis.rs  canvas.rs  dgraph.rs  dispatch.rs  history.rs  infview.rs  interlocking.rs  mileage.rs  mod.rs  model.rs  objects.rs  plan.rs  topology.rs  view.rs  viewmodel.rs
src/document/dgraph/: allpaths.rs
src/gui/: canvas.rs  config.rs  debug.rs  diagram.rs  dispatch.rs  draw_inf.rs  infview.rs  keys.rs  logview.rs  mainmenu.rs  menus.rs  mod.rs  olddiagram.rs  plan.rs  vehicles.rs  widgets.rs
src/gui/diagram/: draw.rs  mod.rs
src/gui/infrastructure/: draw.rs  menus.rs  mod.rs
src/gui/windows/: config.rs  debug.rs  logview.rs  mod.rs  quit.rs  synthesis.rs  vehicles.rs
src/synthesis/: abstractdispatch.rs  add.rs  cost.rs  initial.rs  mod.rs  optimize.rs  reduce.rs
synthesis_tests/: overtake_noinf.ron  twotrack.ron
synthesis_tests/overtake-200m-20mps-095brake/: overtake-21.ron  overtake-27.ron  overtake-33.ron  overtake-39.ron  overtake-41.ron  overtake-49.ron  overtake-53.ron  overtake-59.ron  overtake-61.ron  overtake-65.ron  overtake-67.ron  overtake-71.ron  overtake-73.ron
synthesis_tests/overtake-200m-30mps-050brake/: overtake-19.ron
synthesis_tests/src/: main.rs
themes/: dark.toml  gray.toml  light.toml
