[package]
name = "junction"
version = "0.1.0"
authors = ["Bjørnar Luteberget <luteberget@gmail.com>"]
edition = "2018"

[[bin]]
bench = false
path = "src/main.rs"
name = "junc"

[dependencies]
junc_model = { path = "model" }
junc_calc = { path = "calc" }
junc_app = { path = "app" }
junc_gui = { path = "gui" }

[workspace]
members = [
	"glrail", 
	"dgraphbuilder", 
	"lib/imgui-sys-bindgen", 
	"lib/backend_directx9",
	"lib/backend_glfw",
	"lib/imgui-sys-opengl", 
	"lib/route_finder", 
	"lib/railmlio", 
	"synthesis_tests",
	"gridlinesedit",
	"immuted",
	"lib/numerical_optimization",
	"synthesis_tests",
	"builder",
        "model",
        "calc",
        "app",
        "gui",
]

[profile.release]
lto = true
