[package]
name = "junction"
version = "0.2.0"
authors = ["Bjørnar Luteberget <bjlut@railcomplete.no>"]
edition = "2018"

[dependencies]
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info" ] }
lazy_static = "1.3"
matches = "0.1"
ordered-float = "1.0"
itertools = "0.8"
const-cstr = "0.3"
threadpool = "1.7"
num = "0.2"
num-derive = "0.2"
num-traits = "0.2"
palette = "0.4"
enum-map = "0.6"

im = { version = "13.0", features = ["serde"] }
nalgebra = { version = "0.18", features = ["serde-serialize"] }
nalgebra-glm = "0.4"
petgraph = "0.4"
serde =  { version = "1.0", features = ["derive"] }
serde_cbor = "0.10"

font-kit = "0.4"
tinyfiledialogs = "3.3.6"

backend_glfw = { path = "lib/backend_glfw" }
rolling = { path = "../trainspotting/rolling" }
route_finder = { path = "lib/route_finder" }
lsqr = { path = "../lsqr-rs" }

railplotlib = { path = "../railplot/lib/railplotlib" }
railmlio = { path = "lib/railmlio" }

