[package]
name = "junction"
version = "0.2.10"
authors = ["Bjørnar Luteberget <bjlut@railcomplete.no>"]
edition = "2018"

[dependencies]
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info" ] }
lazy_static = "1.3"
matches = "0.1"
ordered-float = "1.0"
itertools = "0.8"
const-cstr = "0.3"
threadpool = "1.7"
num = "0.2"
num-derive = "0.2"
num-traits = "0.2"
palette = { version = "0.4", features = ["serde"] }
enum-map = { version = "0.6", features = ["serde"] }
boolinator = "2.4"
bimap = "0.4"
permutation = "0.2"

im = { version = "13.0", features = ["serde"] }
nalgebra = { version = "0.18", features = ["serde-serialize"] }
nalgebra-glm = "0.4"
petgraph = "0.4"
serde =  { version = "1.0", features = ["derive", "rc"] }
serde_cbor = "0.10"

font-kit = "0.4"
tinyfiledialogs = "3.3.6"
confy = "0.4"
toml = "0.5"

backend_glfw = { path = "lib/backend_glfw" }
rolling = { path = "lib/trainspotting/rolling" }
planner = { path = "lib/trainspotting/planner" }
route_finder = { path = "lib/route_finder" }
lsqr = { path = "lib/lsqr-rs" }

railplotlib = { path = "lib/railplot/lib/railplotlib" }
railmlio = { path = "lib/railmlio" }
numerical_optimization = { path = "lib/numerical_optimization" }


[profile.release]
lto = true
