[package]
name = "junc_calc"
version = "0.1.0"
authors = ["Bjørnar Luteberget <luteberget@gmail.com>"]
edition = "2018"

[dependencies]
junc_model = { path = "../model" }
route_finder = { path = "../lib/route_finder" }
railplotlib = { path = "../../railplot/lib/railplotlib" }
rolling = { path = "../../trainspotting/rolling" }
planner = { path = "../../trainspotting/planner" }
numerical_optimization = { path = "../lib/numerical_optimization" }
ordered-float = "1.0"
serde = { version = "1.0", features = ["derive"] }
bimap = "0.3"
log = "0.4"
nalgebra = "0.18"
rand = "0.6"
