[package]
name = "glrail"
version = "0.1.2"
authors = ["Bjørnar Luteberget <luteberget@gmail.com>"]
edition = "2018"

[dependencies]
imgui-sys-bindgen = { path = "../lib/imgui-sys-bindgen" }
route_finder = { path = "../lib/route_finder" }
imgui-sys-opengl = { path = "../lib/imgui-sys-opengl" }
# sdl2 = { version = "*", features = ["bundled","static-link"] }
sdl2 = { version = "*" }
gl = "*"
const-cstr="*"
railplotlib = { path = "../../railplot/lib/railplotlib" }
log="*"
simple-logging="*"
serde =  { version = "1.0", features = ["derive"] }
serde_json="*"
smallvec = "0.6"
ordered-float = "*"
nalgebra = "*"
tinyfiledialogs = "*"
threadpool="*"
rolling = { path = "../../trainspotting/rolling" }
planner = { path = "../../trainspotting/planner" }
generational-arena = { version = "0.2", features = ["serde"] }
bimap = "*"
ron = "*"
