[package]
name = "immuted"
version = "0.1.0"
authors = ["Bjørnar Luteberget <bjlut@railcomplete.no>"]
edition = "2018"

[dependencies]
matches = "*"
ordered-float = "*"
itertools = "*"
const-cstr = "*"
threadpool = "*"
num = "0.2"
num-derive = "0.2"

im = "13.0"
nalgebra = "*"
nalgebra-glm = "*"
petgraph = "*"

backend_glfw = { path = "../lib/backend_glfw" }
rolling = { path = "../../trainspotting/rolling" }
route_finder = { path = "../lib/route_finder" }
lsqr = { path = "../../lsqr-rs" }

