[package]
name = "immuted"
version = "0.1.0"
authors = ["Bjørnar Luteberget <bjlut@railcomplete.no>"]
edition = "2018"

[dependencies]
log = "0.4"
lazy_static = "1.3"
matches = "0.1"
ordered-float = "1.0"
itertools = "0.8"
const-cstr = "0.3"
threadpool = "1.7"
num = "0.2"
num-derive = "0.2"
num-traits = "0.2"
palette = "0.4"
enum-map = "0.6"

im = "13.0"
nalgebra = "0.18"
nalgebra-glm = "0.4"
petgraph = "0.4"

font-kit = "0.4"

backend_glfw = { path = "../lib/backend_glfw" }
rolling = { path = "../../trainspotting/rolling" }
route_finder = { path = "../lib/route_finder" }
lsqr = { path = "../../lsqr-rs" }

