[package]
name = "gridlinesedit"
version = "0.1.0"
authors = ["Bjørnar Luteberget <luteberget@gmail.com>"]
edition = "2018"

[dependencies]
backend_glfw = { path = "../backend_glfw" }
imgui-sys-bindgen = { path = "../imgui-sys-bindgen" }
const-cstr = "*"
generational-arena = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json ="1.0"
matches = "0.1"

[profile.release]
lto = true
